<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgrndbagus"
    tools:context=".SignUpGuru">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createaccountguru"
        android:text="@string/buatakun"
        android:textSize="40dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/dodge"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal" />
    <TextView
        android:id="@+id/signupguru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dosen"
        android:textColor="@color/putih"
        android:layout_alignTop="@id/createaccountguru"
        android:textStyle="bold"
        android:textSize="32sp"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp">
    </TextView>
    <!--NIP-->
    <EditText
        android:id="@+id/nipgurusignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/signupguru"
        android:layout_centerVertical="true"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/hitam"
        android:layout_centerInParent="true"
        android:hint="@string/nipp"
        android:autofillHints="@string/nipp"/>
    <!--nama-->
    <EditText
        android:id="@+id/namagurusignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/nipgurusignup"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/hitam"
        android:hint="@string/namaa"
        android:autofillHints="@string/namaa"/>
    <!--jabatan-->
    <EditText
        android:id="@+id/jabatangurusignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/nipgurusignup"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        android:autofillHints="@string/namaa"
        android:ems="10"
        android:hint="Jabatan"
        android:inputType="textEmailAddress"
        android:textColor="@color/hitam" />
    <!--email-->
    <EditText
        android:id="@+id/emailgurusignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/namagurusignup"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/hitam"
        android:hint="@string/email"
        android:autofillHints="@string/email"/>
    <!-- pass -->
    <EditText
        android:id="@+id/passgurusignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/emailgurusignup"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/hitam"
        android:hint="@string/pass"
        android:autofillHints="@string/pass"/>
    <TextView
        android:id="@+id/showpassguru"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/passgurusignup"
        android:layout_alignTop="@id/passgurusignup"
        android:text="@string/show"
        android:layout_marginLeft="167dp"
        android:layout_marginTop="15dp"/>
    <!--button signup-->
    <Button
        android:id="@+id/buttondaftarguru"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_alignTop="@id/passgurusignup"
        android:layout_centerInParent="true"
        android:layout_marginTop="93dp"
        android:background="@drawable/custombutton"
        android:text="DAFTAR" />
    <!--button log in-->
    <Button
        android:id="@+id/buttonkelogin"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_alignTop="@id/buttondaftarguru"
        android:layout_centerInParent="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/custombutton"
        android:text="MASUK" />
</RelativeLayout>