<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgrndbagus"
    tools:context=".HomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/putih">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/logobaru"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:paddingTop="120dp"
                    android:text="SELAMAT DATANG"
                    android:textColor="@color/dodge"
                    android:textSize="32sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </RelativeLayout>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnOrderPreserved="false"
            android:alignmentMode="alignMargins"
            android:rowCount="2"
            android:columnCount="2">
            <androidx.cardview.widget.CardView
                android:id="@+id/buttonsiswa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="5dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="15dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/education"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/maha"
                        android:textSize="18sp"
                        android:textColor="@color/hitam"
                        android:layout_marginTop="12dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/buttonguru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="5dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="15dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/people"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Petugas"
                        android:textSize="18sp"
                        android:textColor="@color/hitam"
                        android:layout_marginTop="12dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/buttoninfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="5dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="15dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/info"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info"
                        android:textSize="18sp"
                        android:textColor="@color/hitam"
                        android:layout_marginTop="12dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/buttonkeluar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="5dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="15dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_baseline_backspace_24"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/team"
                        android:textSize="18sp"
                        android:textColor="@color/hitam"
                        android:layout_marginTop="12dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:orientation="horizontal">-->
<!--            <Button-->
<!--                android:id="@+id/buttonmaha"-->
<!--                android:layout_width="130dp"-->
<!--                android:layout_height="130dp"-->
<!--                android:layout_marginStart="40dp"-->
<!--                android:layout_marginLeft="40dp"-->
<!--                android:layout_marginTop="56dp"-->
<!--                android:background="@color/put"-->
<!--                android:text="@string/maha"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintHorizontal_bias="0.0"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->
<!--            <Button-->
<!--                android:id="@+id/buttondosen"-->
<!--                android:layout_width="130dp"-->
<!--                android:layout_height="130dp"-->
<!--                android:layout_marginTop="56dp"-->
<!--                android:layout_marginEnd="40dp"-->
<!--                android:layout_marginRight="40dp"-->
<!--                android:background="@color/put"-->
<!--                android:text="@string/dosen"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintHorizontal_bias="1.0"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->
<!--            <Button-->
<!--                android:id="@+id/button3"-->
<!--                android:layout_width="130dp"-->
<!--                android:layout_height="130dp"-->
<!--                android:layout_marginStart="40dp"-->
<!--                android:layout_marginLeft="40dp"-->
<!--                android:background="@color/put"-->
<!--                android:text="@string/info"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/buttonmaha"-->
<!--                app:layout_constraintVertical_bias="0.216" />-->
<!--            <Button-->
<!--                android:id="@+id/button4"-->
<!--                android:layout_width="130dp"-->
<!--                android:layout_height="130dp"-->
<!--                android:layout_marginEnd="40dp"-->
<!--                android:layout_marginRight="40dp"-->
<!--                android:background="@color/put"-->
<!--                android:text="@string/tentang"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/buttondosen"-->
<!--                app:layout_constraintVertical_bias="0.216" />-->
<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
    </LinearLayout>
</ScrollView>
